--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "bootstrap-icons": "^1.0.0-alpha5",
     "core-js": "^3.6.4",
     "element-ui": "^2.4.5",
     "lodash": "^4.17.15",
